Fix findings